Se hicieron algunas correcciones en el front

--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -56,60 +56,92 @@
       </nav>
     </header>
 
-      <section class="hero">
-        <div class="hero_content">
-          <section>
-            <!--Tarjetera nueva  -->
-            <div class="row">
-              <!-- Gallery item -->
-              <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm">
-                  <img src="/images/generales.jpg" alt="" class="img-fluid card-img-top" />
-                  <div class="p-4">
-                    <h5>
-                      <a href="/generales" class="text-dark">generales</a>
-                    </h5>
-                  </div>
+    <section class="hero">
+      <div class="hero_content">
+        <section>
+          <!--Tarjetera nueva  -->
+          <div class="row">
+            <!-- Gallery item -->
+            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="/public/images/generales.jpg" alt="Man with backpack"    
+                class="d-block w-full">
+    
+                <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad Industrial</p>
+                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Generales
+                  </h1>
+    
+                <p class="mb-1">
+                  Información indispensable para la seguridad industrial requerida en todas las empresas.
+                </p>
                 </div>
-              </div>
-              <!-- End -->
-              <!-- Gallery item -->
-              <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm">
-                  <img src="/images/metalurgia.jpg" alt="" class="img-fluid card-img-top" />
-                  <div class="p-4">
-                    <h5>
-                      <a href="/metalurgia" class="text-dark">metalurgia</a>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm">
-                  <img src="/images/carpinteria.jpg" alt="" class="img-fluid card-img-top" />
-                  <div class="p-4">
-                    <h5>
-                      <a href="/carpinteria" class="text-dark">carpinteria</a>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm">
-                  <img src="/images/electricidad.jpg" alt="" class="img-fluid card-img-top" />
-                  <div class="p-4">
-                    <h5>
-                      <a href="/electricidad" class="text-dark">electricidad</a>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-              <!-- End -->
+            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            Leer más
+            </a>
             </div>
-          </section>
+            <!-- End -->
+            <!-- Gallery item -->
+            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="/public/images/metalurgia.jpg" alt="Man with backpack"    
+                class="d-block w-full">
+    
+                <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad en el torno</p>
+                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Metalurgia
+                  </h1>
+    
+                <p class="mb-1">
+                  Riesgos, medidas, manejos y cuidados generales para trabajar de manera segura en el torno.
+                </p>
+                </div>
+            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            Leer más
+            </a>
+            </div>
+            
+            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="/public/images/carpinteria.jpg" alt="Man with backpack"    
+                class="d-block w-full">
+    
+                <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad con herramientas</p>
+                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Carpintería
+                  </h1>
+    
+                <p class="mb-1">
+                  Cuidados, recomendaciones, consejos y paso a paso para la utilización de las herramientas de forma adecuada.
+                </p>
+                </div>
+            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            Read More
+            </a>
+            </div>
+
+            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="/public/images/electricidad.jpg" alt="Man with backpack"    
+                class="d-block w-full">
+    
+                <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad con Tableros Eléctricos</p>
+                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Electricidad
+                  </h1>
+    
+                <p class="mb-1">
+                  Riesgos, consejos, instalación y consecuencias de la energía electrica para un buen manipulamiento de la misma.
+                </p>
+                </div>
+            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            Read More
+            </a>
+            </div>
+            <!-- End -->
+          </div>
         </div>
+    </section>
 
     <footer></footer>
   </body>
