Fix: Correccion de checklist y estilos

--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -70,108 +70,106 @@
       <section>
         <h3>Instalaciones Generales</h3>
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Existen
-          salidas de emergencia claramente señalizadas.</label
+          ><input type="checkbox" class="mycheck" /> Existen salidas de
+          emergencia claramente señalizadas.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Las salidas de
-          emergencia están libres de obstáculos.</label
+          ><input type="checkbox" class="mycheck" /> Las salidas de emergencia
+          están libres de obstáculos.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Las puertas de
-          emergencia abren fácilmente y no están bloqueadas.</label
+          ><input type="checkbox" class="mycheck" /> Las puertas de emergencia
+          abren fácilmente y no están bloqueadas.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Hay un sistema
-          de alarma contra incendios instalado y funcionando.</label
+          ><input type="checkbox" class="mycheck" /> Hay un sistema de alarma
+          contra incendios instalado y funcionando.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Se realizan
-          simulacros de evacuación periódicamente.</label
+          ><input type="checkbox" class="mycheck" /> Se realizan simulacros de
+          evacuación periódicamente.</label
         ><br />
         <h3>Prevención de Incendios</h3>
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Hay extintores
-          de incendios ubicados estratégicamente.</label
+          ><input type="checkbox" class="mycheck" /> Hay extintores de incendios
+          ubicados estratégicamente.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Los extintores
-          están en buen estado y no están vencidos.</label
+          ><input type="checkbox" class="mycheck" /> Los extintores están en
+          buen estado y no están vencidos.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Existe un plan
-          de respuesta ante incendios y está actualizado.</label
+          ><input type="checkbox" class="mycheck" /> Existe un plan de respuesta
+          ante incendios y está actualizado.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Los sistemas
-          de detección de humo y alarma contra incendios funcionan
-          correctamente.</label
+          ><input type="checkbox" class="mycheck" /> Los sistemas de detección
+          de humo y alarma contra incendios funcionan correctamente.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Los enchufes y
-          cables eléctricos están en buen estado y no presentan riesgos de
+          ><input type="checkbox" class="mycheck" /> Los enchufes y cables
+          eléctricos están en buen estado y no presentan riesgos de
           cortocircuitos.</label
         ><br />
       </section>
       <section>
         <h3>Seguridad Física</h3>
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Se cuenta con
-          cámaras de seguridad en lugares estratégicos.</label
+          ><input type="checkbox" class="mycheck" /> Se cuenta con cámaras de
+          seguridad en lugares estratégicos.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Los accesos
-          están controlados y se utilizan tarjetas de identificación o sistemas
-          de ingreso seguros.</label
+          ><input type="checkbox" class="mycheck" /> Los accesos están
+          controlados y se utilizan tarjetas de identificación o sistemas de
+          ingreso seguros.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Se realizan
-          revisiones periódicas de las cerraduras y sistemas de
-          seguridad.</label
+          ><input type="checkbox" class="mycheck" /> Se realizan revisiones
+          periódicas de las cerraduras y sistemas de seguridad.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Hay personal
-          de seguridad capacitado y disponible en caso de emergencia.</label
+          ><input type="checkbox" class="mycheck" /> Hay personal de seguridad
+          capacitado y disponible en caso de emergencia.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Las áreas
-          sensibles (como laboratorios o salas de cómputo) están adecuadamente
+          ><input type="checkbox" class="mycheck" /> Las áreas sensibles (como
+          laboratorios o salas de cómputo) están adecuadamente
           protegidas.</label
         ><br />
         <h3>Primeros Auxilios</h3>
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Se dispone de
-          un botiquín de primeros auxilios bien equipado y accesible.</label
+          ><input type="checkbox" class="mycheck" /> Se dispone de un botiquín
+          de primeros auxilios bien equipado y accesible.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Hay personal
-          capacitado en primeros auxilios y RCP.</label
+          ><input type="checkbox" class="mycheck" /> Hay personal capacitado en
+          primeros auxilios y RCP.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Los profesores
-          y personal están al tanto de los procedimientos de primeros
-          auxilios.</label
+          ><input type="checkbox" class="mycheck" /> Los profesores y personal
+          están al tanto de los procedimientos de primeros auxilios.</label
         ><br />
       </section>
       <section>
         <h3>Otros</h3>
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Se realizan
-          inspecciones regulares de seguridad en las instalaciones.</label
+          ><input type="checkbox" class="mycheck" /> Se realizan inspecciones
+          regulares de seguridad en las instalaciones.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Los equipos de
-          cocina y calefacción están en buen estado y cumplen con las normas de
+          ><input type="checkbox" class="mycheck" /> Los equipos de cocina y
+          calefacción están en buen estado y cumplen con las normas de
           seguridad.</label
         ><br />
         <label
-          ><input type="checkbox" class="mycheck" id="mycheck" /> Se realizan
-          evaluaciones de riesgos y se toman medidas para mitigarlos.</label
+          ><input type="checkbox" class="mycheck" /> Se realizan evaluaciones de
+          riesgos y se toman medidas para mitigarlos.</label
         ><br />
         <br />
         <div id="botoncheck">
-          <input type="submit" value="Enviar" />
+          <input type="submit" value="Guardar" />
           <input type="button" value="Imprimir" id="imprimirBtn" />
+          <input type="button" value="Descargar" />
         </div>
       </section>
     </form>
