--- a/public/css/checklist.css
+++ b/public/css/checklist.css
@@ -33,6 +33,7 @@ h2 {
 
 h3 {
   padding-left: 15px;
+  padding-bottom: 10px;
 }
 
 section {
@@ -50,15 +51,15 @@ label {
 input[type="checkbox"] {
   margin-right: 10px;
   margin-left: 10px;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 
 /* Estilos del botón y el botón de impresión */
 #botoncheck {
   text-align: center;
 }
-z input[type="submit"],
+input[type="submit"],
 input[type="button"] {
   padding: 10px 20px;
   background-color: #007bff;
@@ -122,4 +123,19 @@ input[type="button"]:hover {
 .mycheck:disabled:checked {
   background-color: rgb(198, 198, 198);
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+}
+
+@media screen and (max-width: 768px) {
+  form {
+    max-width: fit-content;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 10px;
+    border: none;
+    text-align: left; /* Alinea el texto a la izquierda */
+    width: 100%;
+    box-sizing: content-box;
+    box-shadow: none;
+    position: relative;
+  }
 }
