correcion nav en las paginas y agregado de un archivo css

--- a/views/herramientas.ejs
+++ b/views/herramientas.ejs
@@ -58,5 +58,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <!--==== SCRIPT.JS ==== -->
     <script src="./js/main.js" defer></script>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
