--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -81,5 +81,6 @@
 
     <!--==== ANIMATE ON SCROLL JS CDN -->
     <script src="./js/main.js" defer></script>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
