--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -13,7 +13,8 @@
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/wiki.css" />
+    <link rel="stylesheet" href="css/nav.css">
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -76,7 +77,7 @@
                   Información indispensable para la seguridad industrial requerida en todas las empresas.
                 </p>
                 </div>
-            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            <a href="/generales" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
             Leer más
             </a>
             </div>
@@ -96,7 +97,7 @@
                   Riesgos, medidas, manejos y cuidados generales para trabajar de manera segura en el torno.
                 </p>
                 </div>
-            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            <a href="/metalurgia" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
             Leer más
             </a>
             </div>
@@ -115,8 +116,8 @@
                   Cuidados, recomendaciones, consejos y paso a paso para la utilización de las herramientas de forma adecuada.
                 </p>
                 </div>
-            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-            Read More
+            <a href="/carpinteria" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            Leer más
             </a>
             </div>
 
@@ -134,8 +135,8 @@
                   Riesgos, consejos, instalación y consecuencias de la energía electrica para un buen manipulamiento de la misma.
                 </p>
                 </div>
-            <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-            Read More
+            <a href="/electricidad" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+            Leer más
             </a>
             </div>
             <!-- End -->
@@ -144,5 +145,6 @@
     </section>
 
     <footer></footer>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
