--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -85,5 +85,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
