--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styleprueba.css" />
+    <link rel="stylesheet" href="css/nav.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -81,5 +82,6 @@
     </section>
 
     <footer></footer>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
