--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -38,10 +38,13 @@
           </button>
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
-              <a href="/" class="nav_menu_link">inicio</a>
+              <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
               <a href="/cuenta" class="nav_menu_link">cuenta</a>
+            </li>
+            <li class="nav_menu_item">
+              <a href="/acercade" class="nav_menu_link">formularios</a>
             </li>
             <li class="nav_menu_item">
               <a href="/servicios" class="nav_menu_link">servicios</a>
