--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -35,13 +35,12 @@
           <button class="close_btn" id="close_btn">
             <i class="ri-close-fill"></i>
           </button>
-
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
               <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/cuenta" class="nav_menu_link">Cuenta</a>
+              <a href="/cuenta" class="nav_menu_link">cuenta</a>
             </li>
             <li class="nav_menu_item">
               <a href="/acercade" class="nav_menu_link">formularios</a>
