--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -41,6 +41,9 @@
               <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
+              <a href="/cuenta" class="nav_menu_link">cuenta</a>
+            </li>
+            <li class="nav_menu_item">
               <a href="/acercade" class="nav_menu_link">formularios</a>
             </li>
             <li class="nav_menu_item">
