--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -37,7 +37,7 @@
           </button>
           <ul class="nav_menu_list">
             <li class="nav_menu_item">
-              <a href="/" class="nav_menu_link">inicio</a>
+              <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
               <a href="/cuenta" class="nav_menu_link">cuenta</a>
