--- a/views/metalurgia.ejs
+++ b/views/metalurgia.ejs
@@ -13,7 +13,8 @@
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/documentos.css" />
+    <!-- <link rel="stylesheet" href="css/documentos.css" /> -->
+    <link rel="stylesheet" href="css/nav.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -41,6 +42,9 @@
             </li>
             <li class="nav_menu_item">
               <a href="/generales" class="nav_menu_link">generales</a>
+            </li>
+            <li class="nav_menu_item">
+              <a href="/metalurgia" class="nav_menu_link">metalurgia</a>
             </li>
             <li class="nav_menu_item">
               <a href="/carpinteria" class="nav_menu_link">carpinteria</a>
