--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
@@ -61,19 +55,17 @@
 
     <section>
       <!--Tarjetera nueva  -->
-      <div class="row">
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <img src="images/3.jpeg" alt="" class="img-fluid card-img-top" />
-            <div class="p-4">
-              <h5>
-                <a href="/checklist" class="text-dark">checklist</a>
-              </h5>
+      <div class="wrap_cuenta">
+        <div class="box">
+          <div class="box-top">
+            <img class="box-image" src="images/3.jpeg" alt="Imagen Formulario">
+            <div class="title-flex">
+              <h3 class="box-title">Checklist</h3>
+              <p class="user-follow-info">Formulario con medidas de seguridad</p>
             </div>
           </div>
+          <a href="/checklist" class="button">Rellenar</a>
         </div>
-        <!-- End -->
       </div>
     </section>
     <!-- - ==== HERO ==== → -->
